[tool.poetry]
name = "base"
version = "0.1.3"
description = "Adansons Base"
authors = ["Adansons Developers <engineer@adansons.co.jp>"]
packages = [
    { include = "base"},
]

[tool.poetry.scripts]
base = 'base.cli:main'

[tool.poetry.dependencies]
python = "^3.8,<3.11"
click = ">=8.0.0"
requests = ">=1.0.0"
numpy = ">=1.18.5"
scikit-learn = ">=0.23.0"
PyYAML = "^6.0"
"ruamel.yaml" = "^0.17.21"
colorama = "^0.4.4"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
mypy = "^0.931"
boto3 = "^1.21.13"
jupyter = "^1.0.0"
jupyterlab = "^3.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

