[tool.poetry]
name = "adansons-base"
version = "0.1.3"
description = "Adansons Base"
readme = "README.md"
authors = ["Adansons Developers <engineer@adansons.co.jp>"]
homepage = ""
repository = "https://github.com/adansons/base"
license = "MIT"
packages = [
    { include = "base"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]

[tool.poetry.scripts]
base = 'base.cli:main'

[tool.poetry.dependencies]
python = "^3.8,<3.11"
click = "==8.0.4"
requests = ">=1.0.0"
numpy = ">=1.15"
scikit-learn = ">=0.10"
PyYAML = "^6.0"
"ruamel.yaml" = "^0.17.21"
colorama = "^0.4.4"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
mypy = "^0.931"
boto3 = "^1.21.13"
jupyter = "^1.0.0"
jupyterlab = "^3.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

